<GridLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:layout_gravity="fill_horizontal" 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools" 
    android:paddingBottom="@dimen/activity_vertical_margin" 
    android:paddingLeft="@dimen/activity_horizontal_margin" 
    android:paddingRight="@dimen/activity_horizontal_margin" 
    android:paddingTop="@dimen/activity_vertical_margin" 
    tools:context=".MainActivity">
        
    <Spinner android:id="@+id/location" 
        android:spinnerMode="dropdown" 
        android:contentDescription="@string/location"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_width="164dp"
        android:entries="@array/spinner_default"
         />

    <Spinner android:id="@+id/activity" 
        android:spinnerMode="dropdown" 
        android:contentDescription="@string/location"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_width="164dp"
        android:entries="@array/spinner_default"
        />
    
    <View 
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_height="20dp"        
        />
    
    <ImageButton android:id="@+id/power" 
        android:src="@drawable/power"
        android:contentDescription="@string/power" 
        android:layout_row="3"
        android:layout_column="0" 
        android:layout_width="@dimen/button_width" 
        android:layout_height="@dimen/button_height" 
        android:scaleType="centerInside" 
        />
    <ImageButton android:id="@+id/menu" 
        android:src="@drawable/menu" 
        android:contentDescription="@string/menu" 
        android:longClickable="true" 
        android:layout_row="3" 
        android:layout_column="1" 
        android:layout_width="@dimen/button_width" 
        android:layout_height="@dimen/button_height" 
        android:scaleType="centerInside" 
        />
    <ImageButton android:id="@+id/exit"
        android:src="@drawable/exit" 
        android:contentDescription="@string/exit" 
        android:layout_row="3" 
        android:layout_column="2"
        android:layout_width="@dimen/button_width" 
        android:layout_height="@dimen/button_height" 
        android:scaleType="centerInside" 
        />
    <ImageButton android:id="@+id/back"
        android:src="@drawable/back" 
        android:contentDescription="@string/back" 
        android:layout_row="3" 
        android:layout_column="3"
        android:layout_width="@dimen/button_width" 
        android:layout_height="@dimen/button_height" 
        android:scaleType="centerInside" 
        />
    
	<ImageButton android:id="@+id/volUp" 
	    android:src="@drawable/volup" 
        android:contentDescription="@string/volUp" 
        android:layout_row="4" 
        android:layout_column="0"
        android:layout_width="@dimen/button_width" 
        android:layout_height="@dimen/button_height" 
        android:scaleType="centerInside" 
        />
	<ImageButton android:id="@+id/volDown"
	    android:src="@drawable/voldown" 
        android:contentDescription="@string/volDown" 
        android:layout_row="5" 
        android:layout_column="0"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"  
        android:scaleType="centerInside" 
        />   
	<ImageButton android:id="@+id/mute" 
	    android:src="@drawable/mute" 
        android:contentDescription="@string/mute" 
        android:layout_row="6" 
        android:layout_column="0"
        android:layout_width="@dimen/button_width" 
        android:layout_height="@dimen/button_height" 
        android:scaleType="centerInside" 
        />               
        
	<GridLayout
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
	    android:layout_row="4"
	    android:layout_rowSpan="3"
	    android:layout_column="1"
	    android:layout_columnSpan="3"
	    android:layout_gravity="center_horizontal|center_vertical"
	    >
	    <!-- TODO This layout is here so the arrows can have a different layout feel.  munge the layout -->
	    <ImageButton android:id="@+id/up" 
	        android:src="@drawable/arrow_up" 
	        android:contentDescription="@string/up" 
	        android:layout_row="0" 
	        android:layout_column="1"
			android:layout_width="@dimen/arrow_long" 
			android:layout_height="@dimen/arrow_short" 
	        />      
	    <ImageButton android:id="@+id/left" 
	        android:src="@drawable/arrow_left" 
	        android:contentDescription="@string/left" 
	        android:layout_row="1" 
	        android:layout_column="0"
			android:layout_width="@dimen/arrow_short" 
			android:layout_height="@dimen/arrow_long" 
	        />      
 	    <ImageButton android:id="@+id/ok" 
 	        android:src="@drawable/ok" 
	        android:contentDescription="@string/ok" 
	        android:layout_row="1" 
	        android:layout_column="1"
			android:layout_width="@dimen/arrow_long" 
			android:layout_height="@dimen/arrow_long" 
	        />      
   	    <ImageButton android:id="@+id/right" 
   	        android:src="@drawable/arrow_right" 
	        android:contentDescription="@string/right" 
	        android:layout_row="1" 
	        android:layout_column="2"
			android:layout_width="@dimen/arrow_short" 
			android:layout_height="@dimen/arrow_long" 
	        />      
	    <ImageButton android:id="@+id/down" 
	        android:src="@drawable/arrow_down" 
	        android:contentDescription="@string/down" 
	        android:layout_row="2" 
	        android:layout_column="1"
			android:layout_width="@dimen/arrow_long" 
			android:layout_height="@dimen/arrow_short" 
	        />      
   	         	    	    
	</GridLayout>
	<ImageButton android:id="@+id/pause" 
	    android:src="@drawable/pause" 
        android:contentDescription="@string/pause" 
        android:layout_row="7" 
        android:layout_column="0"
        android:layout_width="@dimen/button_width" 
        android:layout_height="@dimen/button_height" 
        android:scaleType="centerInside" 
        />  
	<ImageButton android:id="@+id/play" 
	    android:src="@drawable/play" 
        android:contentDescription="@string/play" 
        android:layout_row="7" 
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_width="@dimen/button_2width" 
        android:layout_height="@dimen/button_height" 
        android:scaleType="centerInside" 
 
        />
	<ImageButton android:id="@+id/stop" 
	    android:src="@drawable/square" 
        android:contentDescription="@string/stop" 
        android:layout_row="7" 
        android:layout_column="3"
        android:layout_width="@dimen/button_width" 
        android:layout_height="@dimen/button_height" 
        android:scaleType="centerInside" 
        />  
	<ImageButton android:id="@+id/prevTrack" 
	    android:src="@drawable/prevtrack" 
        android:contentDescription="@string/prevTrack" 
        android:layout_row="8" 
        android:layout_column="0"
        android:layout_width="@dimen/button_width" 
        android:layout_height="@dimen/button_height" 
        android:scaleType="centerInside" 
        />  
	<ImageButton android:id="@+id/reverse" 
	    android:src="@drawable/reverse" 
        android:contentDescription="@string/reverse" 
        android:layout_row="8" 
        android:layout_column="1"
        android:layout_width="@dimen/button_width" 
        android:layout_height="@dimen/button_height" 
        android:scaleType="centerInside" 
        />  
	<ImageButton android:id="@+id/forward" 
	    android:src="@drawable/forward" 
        android:contentDescription="@string/forward" 
        android:layout_row="8" 
        android:layout_column="2"
        android:layout_width="@dimen/button_width" 
        android:layout_height="@dimen/button_height" 
        android:scaleType="centerInside" 
        />  
	<ImageButton android:id="@+id/nextTrack" 
	    android:src="@drawable/nexttrack" 
        android:contentDescription="@string/nextTrack" 
        android:layout_row="8" 
        android:layout_column="3"
        android:layout_width="@dimen/button_width" 
        android:layout_height="@dimen/button_height" 
        android:scaleType="centerInside" 
        />  
					
	
</GridLayout>
